; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_free-space-cache.c___bitmap_clear_bits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_free-space-cache.c___bitmap_clear_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_free_space_ctl = type { i32 }
%struct.btrfs_free_space = type { i32, i32, i32 }

@BITS_PER_BITMAP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_free_space_ctl*, %struct.btrfs_free_space*, i64, i64)* @__bitmap_clear_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__bitmap_clear_bits(%struct.btrfs_free_space_ctl* %0, %struct.btrfs_free_space* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.btrfs_free_space_ctl*, align 8
  %6 = alloca %struct.btrfs_free_space*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.btrfs_free_space_ctl* %0, %struct.btrfs_free_space_ctl** %5, align 8
  store %struct.btrfs_free_space* %1, %struct.btrfs_free_space** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %6, align 8
  %12 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %5, align 8
  %15 = getelementptr inbounds %struct.btrfs_free_space_ctl, %struct.btrfs_free_space_ctl* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i64, i64* %7, align 8
  %18 = call i64 @offset_to_bit(i32 %13, i32 %16, i64 %17)
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %5, align 8
  %21 = getelementptr inbounds %struct.btrfs_free_space_ctl, %struct.btrfs_free_space_ctl* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @bytes_to_bits(i64 %19, i32 %22)
  store i64 %23, i64* %10, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* %10, align 8
  %26 = add i64 %24, %25
  %27 = load i64, i64* @BITS_PER_BITMAP, align 8
  %28 = icmp ugt i64 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @BUG_ON(i32 %29)
  %31 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %6, align 8
  %32 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load i64, i64* %9, align 8
  %35 = load i64, i64* %10, align 8
  %36 = call i32 @bitmap_clear(i32 %33, i64 %34, i64 %35)
  %37 = load i64, i64* %8, align 8
  %38 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %6, align 8
  %39 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = sext i32 %40 to i64
  %42 = sub nsw i64 %41, %37
  %43 = trunc i64 %42 to i32
  store i32 %43, i32* %39, align 4
  ret void
}

declare dso_local i64 @offset_to_bit(i32, i32, i64) #1

declare dso_local i64 @bytes_to_bits(i64, i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @bitmap_clear(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
